--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next14",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "npm run dev",
     "build": "npm run build",
