--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "npm run dev",
-    "build": "node server.js",
-    "start": "npm run start"
+    "dev": "node src/server.js",
+    "build": "node src/server.js",
+    "start": "node src/server.js"
   },
   "dependencies": {
+    "@vercel/node": "^5.6.5",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
