--- a/package.json
+++ b/package.json
@@ -1,26 +1,12 @@
 {
-  "name": "next14",
-  "version": "0.1.0",
-  "private": true,
+  "name": "express",
   "type": "module",
-  "scripts": {
-    "dev": "node src/server.js",
-    "build": "node src/server.js",
-    "start": "node src/server.js"
-  },
   "dependencies": {
-    "@vercel/node": "^5.6.5",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
-    "eslint-plugin-html": "^7.1.0",
-    "html-validate": "^8.8.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "typescript": "5.2.2"
+    "@types/express": "5.0.0",
+    "@types/node": "20.11.17",
+    "typescript": "5.8.3"
   }
 }
