--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "NodeNext",
+    "esModuleInterop": true,
     "skipLibCheck": true,
   },
   "exclude": ["node_modules"]
