--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "express",
   "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "express": "^5.1.0"
   },
