--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "myexpress",
-  "type": "module",
+  "name": "express-hello-world",
+  "version": "1.0.0",
+  "description": "Express Hello World on Render",
+  "main": "app.js",
+  "repository": "https://github.com/render-examples/express-hello-world",
+  "author": "Render Developers",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "dev": "node server.mjs",
-    "build": "yarn build",
-    "start": "node server.mjs"
+    "start": "node app.js"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.0.0"
   }
 }
